Adding in delete stuff although it hasn't been tested as awaiting a QA on the delete stuff for Ewan.
Also changed the functionality a bit for the edit stuff to make sure that the changes happen within the if statement which checks for the post data

--- a/src/Message/Mothership/FileManager/View/detail.html.twig
+++ b/src/Message/Mothership/FileManager/View/detail.html.twig
@@ -18,8 +18,11 @@
 	<textarea id="file-tags" name="file[tags]">{% for tag in file.tags %}
 {{ tag }}{% if loop.last != true %}, {% endif %}
 {% endfor %}</textarea>
-
 	<label for="file-alt-text">Alt Text</label>
 	<input id="file-alt-text" type="text" name="file[alt_text]" value="{{ file.altText }}" />
 	<button name="update" type="submit" value="Submit">Update</button>
+</form>
+
+<form action="/files/detail/{{ file.fileID }}/delete" method="post">
+	<button name="delete[delete]" value="delete" id="delete" type="submit">Delete</button>
 </form>
