--- a/src/Message/Mothership/FileManager/View/listing.html.twig
+++ b/src/Message/Mothership/FileManager/View/listing.html.twig
@@ -1,7 +1,9 @@
 <h1>File Manager</h1>
 
-<form action="" method="post">
-	<input type="file" name="upload" />
+<form action="" method="post" enctype="multipart/form-data">
+	<input type="file" name="upload[]" multiple />
+	<input type="submit" name="submit" value="Upload" />
+
 	<select name="filter">
 		<option value="">Sort by...</option>
 	</select>
