--- a/src/Message/Mothership/FileManager/View/detail.html.twig
+++ b/src/Message/Mothership/FileManager/View/detail.html.twig
@@ -7,7 +7,7 @@
 	<li>Dimensions: {{ file.dimensionsX }} x {{ file.dimensionsY }}</li>
 	<li>Uploaded By: {{ author.getName }} at {{ file.authorship.createdAt|date }}</li>
 	{% if file.authorship.updatedAt != NULL %}
-		<li>Editied By: {{ file.authorship.updatedBy }} at {{ file.authorship.updatedAt }}</li>
+		<li>Editied By: {{ file.authorship.updatedBy }} at {{ file.authorship.updatedAt|date }}</li>
 	{% endif %}
 </ul>
 
