--- a/src/Message/Mothership/FileManager/View/listing.html.twig
+++ b/src/Message/Mothership/FileManager/View/listing.html.twig
@@ -1,5 +1,11 @@
 <h1>File Manager</h1>
 
+{% for types in flash %}
+	{% for message in types %}
+		<p>{{ message }}</p>
+	{% endfor %}
+{% endfor %}
+
 <form action="" method="post" enctype="multipart/form-data">
 	<input type="file" name="upload[]" multiple />
 	<input type="submit" name="submit" value="Upload" />
