--- a/src/Message/Mothership/FileManager/View/listing.html.twig
+++ b/src/Message/Mothership/FileManager/View/listing.html.twig
@@ -3,7 +3,7 @@
 {% block main %}
 <h1>File Manager</h1>
 
-<form action="{{ url('ms.file_manager.upload') }}" method="post" enctype="multipart/form-data">
+<form action="{{ url('ms.cp.file_manager.upload') }}" method="post" enctype="multipart/form-data">
 	<input type="file" name="upload[]" multiple />
 	<input type="submit" name="submit" value="Upload" />
 
@@ -16,12 +16,12 @@
 	</select>
 </form>
 
-<form action="{{ url('ms.file_manager.listing') }}" method="get">
-	<input type="search" name="search" placeholder="Search" value="{{ search }}" />
+<form action="{{ url('ms.cp.file_manager.search.forward') }}" method="post">
+	<input type="search" name="file_search[term]" id="file_search-term" placeholder="Enter search term&hellip;" value="{{ searchTerm }}">
 	<button type="submit">Search</button>
 </form>
 
 {% for file in files %}
-	<a href="{{ url('ms.file_manager.detail', {fileID: file.fileID}) }}"><img src="{{ file.file.getPublicUrl }}" alt="{{ file.altText }}" style="width: 200px; height: auto;" /></a>
+	<a href="{{ url('ms.cp.file_manager.detail', {fileID: file.fileID}) }}"><img src="{{ file.file.getPublicUrl }}" alt="{{ file.altText }}" style="width: 200px; height: auto;" /></a>
 {% endfor %}
 {% endblock %}
