Renaming the blocks to match CP updates

--- a/src/Message/Mothership/FileManager/View/detail.html.twig
+++ b/src/Message/Mothership/FileManager/View/detail.html.twig
@@ -1,6 +1,6 @@
 {% extends 'Message:Mothership:ControlPanel::_templates/cp' %}
 
-{% block main %}
+{% block content %}
 <h1>File Detail</h1>
 <img src="{{ resize(file.file.getPublicUrl, 300, null) }}" alt="{{ file.altText }}" />
 <ul>
