--- a/src/Message/Mothership/FileManager/View/listing.html.twig
+++ b/src/Message/Mothership/FileManager/View/listing.html.twig
@@ -1,6 +1,6 @@
 {% extends 'Message:Mothership:ControlPanel::_templates/cp' %}
 
-{% block main %}
+{% block content %}
 <h1>File Manager</h1>
 
 <form action="{{ url('ms.cp.file_manager.upload') }}" method="post" enctype="multipart/form-data">
