--- a/src/Message/Mothership/FileManager/View/detail.html.twig
+++ b/src/Message/Mothership/FileManager/View/detail.html.twig
@@ -14,17 +14,11 @@
 	{% endif %}
 </ul>
 
-<form action="{{ url('ms.cp.file_manager.edit', {fileID: file.id}) }}" method="post">
-	<label for="file-tags">Tags</label>
-	<textarea id="file-tags" name="file[tags]">{{ file.tags|join(', ') }}</textarea>
-
-	{% if file.isTypeImage() %}
-	<label for="file-alt-text">Alt Text</label>
-	<input id="file-alt-text" type="text" name="file[alt_text]" value="{{ file.altText }}" />
-	{% endif %}
-
+{{ form_start(form) }}
+	{{ form_row(form.tags) }}
+	{{ form_row(form.alt_text) }}
 	<button name="update" type="submit" value="Submit">Update</button>
-</form>
+{{ form_end(form) }}
 
 <form action="{{ url('ms.cp.file_manager.delete', {fileID: file.id}) }}" method="post">
 	<input type="hidden" name="_method" value="DELETE">
