Updating the search to use the form component

--- a/src/Message/Mothership/FileManager/View/listing.html.twig
+++ b/src/Message/Mothership/FileManager/View/listing.html.twig
@@ -4,27 +4,14 @@
 <h1>File Manager</h1>
 
 {{ form_start(form) }}
-{{ form_widget(form.new_upload, { 'attr': { 'multiple': 'multiple' }, 'full_name': form.new_upload.get('full_name') ~ 'upload[new_upload][]' }) }}
+	{{ form_widget(form.new_upload, { 'attr': { 'multiple': 'multiple' }, 'full_name': form.new_upload.get('full_name') ~ 'upload[new_upload][]' }) }}
 	<button type="submit">Upload</button>
 {{ form_end(form) }}
 
-<!-- <form action="{{ url('ms.cp.file_manager.upload') }}" method="post" enctype="multipart/form-data">
-	<input type="file" name="upload[]" multiple />
-	<input type="submit" name="submit" value="Upload" />
-
-	<select name="filter">
-		<option value="">Sort by...</option>
-	</select>
-
-	<select name="sort">
-		<option value="">Filter by...</option>
-	</select>
-</form> -->
-
-<form action="{{ url('ms.cp.file_manager.search.forward') }}" method="post">
-	<input type="search" name="file_search[term]" id="file_search-term" placeholder="Enter search term&hellip;" value="{{ searchTerm }}">
+{{ form_start(search_form) }}
+	{{ form_row(search_form.term) }}
 	<button type="submit">Search</button>
-</form>
+{{ form_end(search_form) }}
 
 {% for file in files %}
 	<a href="{{ url('ms.cp.file_manager.detail', {fileID: file.id}) }}"><img src="{{ resize(file.file.getPublicUrl, 200, 200) }}" alt="{{ file.altText }}" /></a>
