A couple of fixes and adding in a banndedFiletype method to check specific extensions rather than mimes

--- a/src/Message/Mothership/FileManager/View/detail.html.twig
+++ b/src/Message/Mothership/FileManager/View/detail.html.twig
@@ -6,8 +6,8 @@
 <ul>
 	<li>Name: {{ file.name }}</li>
 	<li>Type: {{ file.typeID }}</li>
-	<li>Size: {{ file.size }}</li>
-	<li>Dimensions: {{ file.dimensionsX }} x {{ file.dimensionsY }}</li>
+	<li>Size: {{ file.fileSize }}</li>
+	<li>Dimensions: {{ file.dimensionX }} x {{ file.dimensionY }}</li>
 	<li>Uploaded By: {{ author.getName }} at {{ file.authorship.createdAt|date }}</li>
 	{% if file.authorship.updatedAt != NULL %}
 		<li>Editied By: {{ file.authorship.updatedBy }} at {{ file.authorship.updatedAt|date }}</li>
