--- a/src/Message/Mothership/FileManager/View/detail.html.twig
+++ b/src/Message/Mothership/FileManager/View/detail.html.twig
@@ -1,28 +1,38 @@
-{% extends 'Message:Mothership:ControlPanel::_templates/cp' %}
+{% extends 'Message:Mothership:ControlPanel::_templates/left_sidebar' %}
 
-{% block content %}
-<h1>{{ 'ms.cp.file_manager.detail.title'|trans }}</h1>
-<img src="{{ resize(file.file.getPublicUrl, 300, null) }}" alt="{{ file.altText }}" />
+{% block sidebar %}
+	<a href="{{ url('ms.cp.file_manager.listing') }}">Back to file list</a>
+{% endblock %}
 
-<ul>
-	<li>{{ 'ms.cp.file_manager.detail.labels.name'|trans }}: {{ file.name }}</li>
-	<li>{{ 'ms.cp.file_manager.detail.labels.type'|trans }}: {{ file.typeID }}</li>
-	<li>{{ 'ms.cp.file_manager.detail.labels.size'|trans }}: {{ file.fileSize }}</li>
-	<li>{{ 'ms.cp.file_manager.detail.labels.dimensions'|trans }}: {{ file.dimensionX }} x {{ file.dimensionY }}</li>
-	<li>{{ 'ms.cp.file_manager.detail.labels.author'|trans }}: {{ author.getName }} at {{ file.authorship.createdAt|date }}</li>
-	{% if file.authorship.updatedAt != NULL %}
-		<li>{{ 'ms.cp.file_manager.detail.labels.edit-by'|trans }}: {{ file.authorship.updatedBy }} at {{ file.authorship.updatedAt|date }}</li>
-	{% endif %}
-</ul>
+{% block main %}
+<hgroup class="title">
+	<h1>{{ 'ms.cp.file_manager.detail.title'|trans }}</h1>
+</hgroup>
 
-{{ form_start(form) }}
-	{{ form_row(form.tags) }}
-	{{ form_row(form.alt_text) }}
-	<button name="update" type="submit" value="Submit">{{ 'ms.cp.file_manager.detail.buttons.update'|trans }}</button>
-{{ form_end(form) }}
+<div class="container-content">
+	<img src="{{ resize(file.file.getPublicUrl, 300, null) }}" alt="{{ file.altText }}" />
 
-<form action="{{ url('ms.cp.file_manager.delete', {fileID: file.id}) }}" method="post">
-	<input type="hidden" name="_method" value="DELETE">
-	<button name="delete[delete]" value="delete" id="delete" type="submit">{{ 'ms.cp.file_manager.detail.buttons.delete'|trans }}</button>
-</form>
+	<ul>
+		<li>{{ 'ms.cp.file_manager.detail.labels.name'|trans }}: {{ file.name }}</li>
+		<li>{{ 'ms.cp.file_manager.detail.labels.type'|trans }}: {{ file.typeID }}</li>
+		<li>{{ 'ms.cp.file_manager.detail.labels.size'|trans }}: {{ file.fileSize }}</li>
+		<li>{{ 'ms.cp.file_manager.detail.labels.dimensions'|trans }}: {{ file.dimensionX }} x {{ file.dimensionY }}</li>
+		<li>{{ 'ms.cp.file_manager.detail.labels.author'|trans }}: {{ author.getName }} at {{ file.authorship.createdAt|date }}</li>
+		{% if file.authorship.updatedAt != NULL %}
+			<li>{{ 'ms.cp.file_manager.detail.labels.edit-by'|trans }}: {{ file.authorship.updatedBy }} at {{ file.authorship.updatedAt|date }}</li>
+		{% endif %}
+	</ul>
+
+	{{ form_start(form) }}
+		{{ form_row(form.tags) }}
+		{{ form_row(form.alt_text) }}
+		<button name="update" type="submit" value="Submit">{{ 'ms.cp.file_manager.detail.buttons.update'|trans }}</button>
+	{{ form_end(form) }}
+
+	<form action="{{ url('ms.cp.file_manager.delete', {fileID: file.id}) }}" method="post">
+		<input type="hidden" name="_method" value="DELETE">
+		<button name="delete[delete]" value="delete" id="delete" type="submit">{{ 'ms.cp.file_manager.detail.buttons.delete'|trans }}</button>
+	</form>
+</div>
+
 {% endblock %}
