--- a/src/Message/Mothership/FileManager/View/listing.html.twig
+++ b/src/Message/Mothership/FileManager/View/listing.html.twig
@@ -1,20 +1,25 @@
-{% extends 'Message:Mothership:ControlPanel::_templates/cp' %}
+{% extends 'Message:Mothership:ControlPanel::_templates/left_sidebar' %}
 
-{% block content %}
-<hgroup class="title">
-	<h1>File Manager</h1>
-</hgroup>
-{{ form_start(form) }}
-	{{ form_widget(form.new_upload, { 'attr': { 'multiple': 'multiple' }, 'full_name': form.new_upload.get('full_name') ~ 'upload[new_upload][]' }) }}
-	<button type="submit">Upload</button>
-{{ form_end(form) }}
+{% block sidebar %}
+	{{ form_start(search_form) }}
+		{{ form_row(search_form.term) }}
+		<button type="submit">Search</button>
+	{{ form_end(search_form) }}
 
-{{ form_start(search_form) }}
-	{{ form_row(search_form.term) }}
-	<button type="submit">Search</button>
-{{ form_end(search_form) }}
+	{{ form_start(form) }}
+		{{ form_widget(form.new_upload, { 'attr': { 'multiple': 'multiple' }, 'full_name': form.new_upload.get('full_name') ~ 'upload[new_upload][]' }) }}
+		<button type="submit">Upload</button>
+	{{ form_end(form) }}
+{% endblock %}
 
-{% for file in files %}
-	<a href="{{ url('ms.cp.file_manager.detail', {fileID: file.id}) }}"><img src="{{ resize(file.file.getPublicUrl, 200, 200) }}" alt="{{ file.altText }}" /></a>
-{% endfor %}
+{% block main %}
+	<hgroup class="title">
+		<h1>File Manager</h1>
+	</hgroup>
+
+	<div class="container-content">
+		{% for file in files %}
+			<a href="{{ url('ms.cp.file_manager.detail', {fileID: file.id}) }}"><img src="{{ resize(file.file.getPublicUrl, 200, 200) }}" alt="{{ file.altText }}" /></a>
+		{% endfor %}
+	</div>
 {% endblock %}
