markup changes to the listing and details

--- a/src/Message/Mothership/FileManager/View/detail.html.twig
+++ b/src/Message/Mothership/FileManager/View/detail.html.twig
@@ -9,7 +9,7 @@
 	<h1>{{ 'ms.cp.file_manager.detail.title'|trans }}</h1>
 </hgroup>
 
-<div class="container-content">
+<div class="container-file-manager">
 	<img src="{{ resize(file.file.getPublicUrl, 300, null) }}" alt="{{ file.altText }}" />
 
 	<ul>
