--- a/src/Message/Mothership/FileManager/View/listing.html.twig
+++ b/src/Message/Mothership/FileManager/View/listing.html.twig
@@ -1,15 +1,19 @@
 {% extends 'Message:Mothership:ControlPanel::_templates/left_sidebar' %}
 
 {% block sidebar %}
+	<div class="search file">
 	{{ form_start(search_form) }}
-		{{ form_row(search_form.term) }}
+		{{ form_row(search_form.term, { 'attr': {'placeholder': 'Search files...' } }) }}
 		<button type="submit">Search</button>
 	{{ form_end(search_form) }}
+	</div>
 
+	<div class="file-upload">
 	{{ form_start(form) }}
 		{{ form_widget(form.new_upload, { 'attr': { 'multiple': 'multiple' }, 'full_name': form.new_upload.get('full_name') ~ 'upload[new_upload][]' }) }}
-		<button type="submit">Upload</button>
+		<button type="submit" class="upload">Upload</button>
 	{{ form_end(form) }}
+	</div>
 {% endblock %}
 
 {% block main %}
@@ -17,9 +21,11 @@
 		<h1>File Manager</h1>
 	</hgroup>
 
-	<div class="container-content">
+	<div class="container-file-manager">
+		<div class="listing">
 		{% for file in files %}
 			<a href="{{ url('ms.cp.file_manager.detail', {fileID: file.id}) }}"><img src="{{ resize(file.file.getPublicUrl, 200, 200) }}" alt="{{ file.altText }}" /></a>
 		{% endfor %}
+		</div>
 	</div>
 {% endblock %}
