--- a/src/Message/Mothership/FileManager/View/detail.html.twig
+++ b/src/Message/Mothership/FileManager/View/detail.html.twig
@@ -1,7 +1,7 @@
 {% extends 'Message:Mothership:ControlPanel::_templates/left_sidebar' %}
 
 {% block sidebar %}
-	<a href="{{ url('ms.cp.file_manager.listing') }}" class="back">Back to file list</a>
+	<a href="{{ url('ms.cp.file_manager.listing') }}" class="back" data-live>Back to file list</a>
 {% endblock %}
 
 {% block main %}
