--- a/src/Message/Mothership/FileManager/View/listing.html.twig
+++ b/src/Message/Mothership/FileManager/View/listing.html.twig
@@ -11,7 +11,7 @@
 	<div class="file-upload">
 	{{ form_start(form) }}
 		{{ form_widget(form.new_upload, { 'attr': { 'multiple': 'multiple' }, 'full_name': form.new_upload.get('full_name') ~ 'upload[new_upload][]' }) }}
-		<button type="submit" class="upload">Upload</button>
+		<button type="submit" class="button small upload">Upload</button>
 	{{ form_end(form) }}
 	</div>
 {% endblock %}
