changing container classes

--- a/src/Message/Mothership/FileManager/View/detail.html.twig
+++ b/src/Message/Mothership/FileManager/View/detail.html.twig
@@ -9,7 +9,7 @@
 	<h1>{{ 'ms.cp.file_manager.detail.title'|trans }}</h1>
 </hgroup>
 
-<div class="container-file-manager">
+<div class="container-content file-manager">
 	<div class="file-attributes">
 		<img src="{{ resize(file.file.getPublicUrl, 300, null) }}" alt="{{ file.altText }}" />
 		<h1>{{ 'ms.cp.file_manager.detail.labels.name'|trans }}: {{ file.name }}</h1>
