--- a/src/Message/Mothership/FileManager/View/listing.html.twig
+++ b/src/Message/Mothership/FileManager/View/listing.html.twig
@@ -21,7 +21,7 @@
 		<h1>File Manager</h1>
 	</hgroup>
 
-	<div class="container-file-manager">
+	<div class="container-content file-manager">
 		<div class="listing">
 		{% for file in files %}
 			<a href="{{ url('ms.cp.file_manager.detail', {fileID: file.id}) }}" data-live><img src="{{ resize(file.file.getPublicUrl, 200, 200) }}" alt="{{ file.altText }}" /></a>
