changing a class name conflict

--- a/resources/view/listing.html.twig
+++ b/resources/view/listing.html.twig
@@ -8,7 +8,7 @@
 	{{ form_end(search_form) }}
 	</div>
 
-	<div class="filter">
+	<div class="filter-by">
 		<select name="Sort" id="sortBy">
 			<option value="">Sort by...</option>
 			<option value="name">Name</option>
